correctly align copyright text

--- a/src/styles.css
+++ b/src/styles.css
@@ -633,12 +633,13 @@ section.footer {
 
 .footer div p {
   display: inline;
-  color: var(--light-color);
+  color: gray;
 }
 
 /*Extra Mobile Responsiveness */
 
 @media screen and (max-width: 768px) {
+  /* Slogan */
   .client-logos-container {
     flex-direction: column;
     align-items: center;
@@ -660,5 +661,16 @@ section.footer {
     text-align: center;
     display: flex;
     padding-top: 1.5rem;
+  }
+
+  /* Client count section */
+  section.client-count-section {
+    text-align: center;
+  }
+
+  section.footer div {
+    text-align: center;
+    flex-direction: column;
+    gap: 1rem 0;
   }
 }
